# oatpp

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  DTOs.hpp  README.md
benchmark/async/: App.cpp  AppComponent.hpp  BenchController.hpp
benchmark/results/: results-async-20260622-003228.csv  results-async-20260622-013549.csv  results-async-20260622-014702.csv  results-sync-20260622-001707.csv  results-sync-20260622-004702.csv  results-sync-20260622-012729.csv
benchmark/scripts/: array_response.lua  echo.lua  headers.lua  hello.lua  json_large.lua  json_small.lua  mixed_payload.lua  nested_json.lua  path_param.lua  query_params.lua  run-benchmark.py  run-benchmark.sh  verify.sh
benchmark/sync/: App.cpp  AppComponent.hpp  BenchController.hpp
src/: CMakeLists.txt
src/oatpp/base/: Config.hpp
src/oatpp/data/stream/: BufferStream.cpp  BufferStream.hpp  Stream.hpp
src/oatpp/data/type/: Collection.hpp
src/oatpp/json/: Deserializer.cpp  FastDeserializer.cpp  FastDeserializer.hpp  FastSerializer.cpp  FastSerializer.hpp  ObjectMapper.cpp  Utils.cpp  Utils.hpp
test/: CMakeLists.txt
test/oatpp/: AllTestsMain.cpp
test/oatpp/json/: JsonStressTest.cpp  JsonStressTest.hpp  JsonTest.cpp  JsonTest.hpp
